2008-09-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.scorerender.inc.php:
	- Move error handling into class.
	- scorerender_generate_html_error -> ScoreRender::get_error_msg()
	- ScoreRender::render() only emittes failure instead of returning
	  error code, since error is retrieved by get_error_msg() instead.

	* class.*.inc.php:
	- Fix is_notation_usable(), it should be invokable even if no class is
	  initialized.

2008-09-04  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Completely eliminate class constructor.

	* wp-scorerender.php:
	- (scorerender_do_content, scorerender_do_comment) Dropped.
	  Replaced by anonymous function in add_action().

	* class.scorerender.inc.php:
	- (init_options) Dropped. $this->_options truely gone.

2008-09-03  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_process_content) Very minor change in CSS.
	- (scorerender_filter) Also set program names in class methods.

	* class.scorerender.inc.php:
	- (set_programs) New func. For specifying programs used for rendering.
	
	* class.mup.inc.php:
	- (set_magic_file) New func. For setting magic file.

	* class.*.inc.php:
	- Eliminate usage of $this->_options.

2008-09-01  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	- (set_imagemagick_path, set_inverted, set_transparency, set_temp_dir,
	  get_temp_dir, set_cache_dir, get_cache_dir, set_max_length,
	  set_img_width) New func. Add methods for accessing most config
	  options, avoid sneaking option directly when creating instance.
	- (render) Return early if cache exist, without any other checks. Use
	  sys_get_temp_dir() for fallback temp dir.
	- (is_imagemagick_usable) Dropped, use is_prog_usable() instead.

	* class.*.inc.php:
	- Use private variables instead of reading options directly.

	* class.mup.inc.php (is_valid_input):
	- No need to supply input content as function argument now.

	* wp-scorerender.php: